<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/principal"
        app:title="@string/app_name"
        style="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@font/nunito_variable_font_wght"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginBottom="75dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spinner_title"
                android:fontFamily="@font/nunito_variable_font_wght"/>

            <Spinner
                android:id="@+id/shape_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/shape_image_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/shape_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/description_image"
                android:scaleType="centerInside"
                android:background="@color/background"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/shape_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/radius_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:hint="@string/hintCircle"
                android:inputType="numberDecimal"
                android:visibility="gone"
                android:fontFamily="@font/nunito_variable_font_wght"
                android:textColor="#333333"/>

            <EditText
                android:id="@+id/side_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSquare"
                android:autofillHints="none"
                android:inputType="numberDecimal"
                android:visibility="gone"
                android:fontFamily="@font/nunito_variable_font_wght"
                android:textColor="#333333"/>

            <LinearLayout
                android:id="@+id/base_height_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/baseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="none"
                    android:hint="@string/hintBase"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/nunito_variable_font_wght"
                    android:textColor="#333333"/>

                <EditText
                    android:id="@+id/heightEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="none"
                    android:hint="@string/hintHeight"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/nunito_variable_font_wght"
                    android:textColor="#333333"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calculate_area_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button"
            android:backgroundTint="@color/principal"
            android:textColor="@color/text"
            android:fontFamily="@font/nunito_italic_variable_font_wght"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
